Set min width to toggle in creator to avoid flickering

--- a/src/pages/creator/creator.css
+++ b/src/pages/creator/creator.css
@@ -65,6 +65,10 @@
   align-items: flex-start;
 }
 
+.creator__form-bottom .uik-toggle:first-child .uik-toggle__text {
+  min-width: 68px;
+}
+
 .creator__form .uik-label {
   white-space: nowrap;
 }
